<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.upc.fib.meetnrun.views.LoginActivity">

        <LinearLayout
            android:id="@+id/login_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="50dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/mr2" />

            <!--<de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/mr"
                app:civ_border_width="0dp"
                app:civ_border_color="@color/white"
                android:layout_marginTop="25dp"
                android:layout_gravity="center"/>-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_layout1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:textSize="17dp" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textSize="17dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_buttons_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:onClick="loginButton"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signin"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:onClick="registerButton"
                    android:text="@string/register_label"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

    </RelativeLayout>
</ScrollView>