<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.upc.fib.meetnrun.views.fragments.ProfileActivityFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="#BBCEDC" />

        <TextView
            android:id="@+id/userProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/headerImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:elevation="5dp"
            android:padding="20dp"
            android:background="@drawable/user_profile_circular_text_view"
            android:gravity="center"
            android:scaleType="centerCrop"
            android:textSize="40sp"
            android:text="e"
            android:textColor="@color/black"/>
        
        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerImage"
            android:background="#ffff"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="User-name" />

            <TextView
                android:id="@+id/completeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/userName"
                android:layout_marginTop="12dp"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Name" />

            <TextView
                android:id="@+id/userPostCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:layout_below="@+id/completeName"
                android:textColor="#000000"
                android:textSize="15sp"
                android:text="Postcode" />

            </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/profile_layout">

            <Button
                android:id="@+id/editProfile_button"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/button_edit_profile" />

            <Button
                android:id="@+id/changePass_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/button_edit_password" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>
